create Signup Controller

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -4,7 +4,7 @@
 <head th:replace="fragments :: head"></head>
 
 <body>
-<div>Oopsie doodle! Looks like you've got an error there, chief.</div>
+<h1>Error.</h1>
 
 <div th:replace="fragments :: navigation"></div>
 
