--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -13,7 +13,8 @@
 <nav>
 <a href="/">Home</a> |
 <a href="/login">Log In</a> |
-<a href="/signup">Sign Up</a>
+<a href="/signup">Sign Up</a> |
+<a href="/users">Users</a>
 </nav>
 </div>
 
