--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<head th:include="fragments :: head"></head>
+<head th:replace="fragments :: head"></head>
 
 <body>
-    <div><h1>This is the homepage!</h1></div>
     <div th:replace="fragments :: navigation"></div>
+    <div><h1>This is the homepage!</h1></div>
 </body>
 
 </html>
