--- a/src/main/resources/templates/example.html
+++ b/src/main/resources/templates/example.html
@@ -41,7 +41,7 @@
 <!-- Container (About Section) -->
 <div class="w3-content w3-container w3-padding-64" id="about">
     <h3 class="w3-center">ABOUT ME</h3>
-    <p class="w3-center"><em>Musician, Programmer, Designer</em></p>
+    <p class="w3-center"><em>Music Producer, Web Developer, Dungeon Master</em></p>
     <p>I have created a fictional "personal" website/blog, which I can use to practice web development and display publicly as a portfolio.
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
         quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
@@ -77,20 +77,20 @@
 
 <div class="w3-row w3-center w3-dark-grey w3-padding-16">
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">30+</span><br>
+        <span class="w3-xlarge">45</span><br>
         Songs Published
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">55+</span><br>
-        Projects Done
+        <span class="w3-xlarge">16,000+</span><br>
+        Streams Per Week
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">89+</span><br>
-        Happy Clients
+        <span class="w3-xlarge">10+</span><br>
+        Months In Web Development
     </div>
     <div class="w3-quarter w3-section">
-        <span class="w3-xlarge">150+</span><br>
-        Meetings
+        <span class="w3-xlarge">1</span><br>
+        Certification Obtained
     </div>
 </div>
 
@@ -104,44 +104,47 @@
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <h3 class="w3-center">MY WORK</h3>
-    <p class="w3-center"><em>Here are some of my latest lorem work ipsum tipsum.<br> Click on the images to make them bigger</em></p><br>
+    <p class="w3-center">
+        <em>Here are some of the projects that I've published over the years.<br>
+        Click on the images to make them bigger</em>
+    </p><br>
 
     <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
     <div class="w3-row-padding w3-center">
         <div class="w3-col m3">
-            <img src="/w3images/p1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist over the mountains">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coffee beans">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Bear closeup">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Quiet ocean">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
     </div>
 
     <div class="w3-row-padding w3-center w3-section">
         <div class="w3-col m3">
-            <img src="/w3images/p5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="The mist">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My beloved typewriter">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Empty ghost train">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="/w3images/p8.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Sailing">
+            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
-        <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>
+<!--        <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>-->
     </div>
 </div>
 
@@ -163,34 +166,23 @@
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-    <h3 class="w3-center">WHERE I WORK</h3>
-    <p class="w3-center"><em>I'd love your feedback!</em></p>
+    <h3 class="w3-center">WHERE YOU CAN FIND ME</h3>
+    <p class="w3-center"><em>I'd love to hear from you!</em></p>
 
     <div class="w3-row w3-padding-32 w3-section">
         <div class="w3-col m4 w3-container">
-            <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+            <img src="images/map.PNG" class="w3-image w3-round" style="width:100%">
         </div>
         <div class="w3-col m8 w3-panel">
             <div class="w3-large w3-margin-bottom">
-                <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Chicago, US<br>
-                <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +00 151515<br>
-                <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email: mail@mail.com<br>
+                <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>St. Louis, MO<br>
+                <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>+1 (618) 555-1234<br>
+                <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>kenny.maness@gmail.com<br>
+                <i class="fa fa-facebook fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.facebook.com/kennethlewismaness">Facebook</a><br>
+                <i class="fa fa-instagram fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.instagram.com/kenny.maness/">Instagram</a><br>
+                <i class="fa fa-twitter fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://twitter.com/kenny_maness">Twitter</a><br>
+                <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.linkedin.com/in/kenneth-maness-61784219a/">LinkedIn</a><br>
             </div>
-            <p>Swing by for a cup of <i class="fa fa-coffee"></i>, or leave me a note:</p>
-            <form action="/action_page.php" target="_blank">
-                <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                    <div class="w3-half">
-                        <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
-                    </div>
-                    <div class="w3-half">
-                        <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
-                    </div>
-                </div>
-                <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
-                <button class="w3-button w3-black w3-right w3-section" type="submit">
-                    <i class="fa fa-paper-plane"></i> SEND MESSAGE
-                </button>
-            </form>
         </div>
     </div>
 </div>
@@ -198,15 +190,12 @@
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
     <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
-    <div class="w3-xlarge w3-section">
-        <i class="fa fa-facebook-official w3-hover-opacity"></i>
-        <i class="fa fa-instagram w3-hover-opacity"></i>
-        <i class="fa fa-snapchat w3-hover-opacity"></i>
-        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
-        <i class="fa fa-twitter w3-hover-opacity"></i>
-        <i class="fa fa-linkedin w3-hover-opacity"></i>
-    </div>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+<!--    <div class="w3-xlarge w3-section">-->
+<!--        <i class="fa fa-facebook-official w3-hover-opacity"></i>-->
+<!--        <i class="fa fa-instagram w3-hover-opacity"></i>-->
+<!--        <i class="fa fa-twitter w3-hover-opacity"></i>-->
+<!--        <i class="fa fa-linkedin w3-hover-opacity"></i>-->
+<!--    </div>-->
 </footer>
 
 </body>
