rename example as index and use it as homepage; more front end polish

--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,19 +4,20 @@
 <head th:replace="fragments :: head"></head>
 
 <body>
-<div>
-    <div th:replace="fragments :: navigation"></div>
+    <div th:replace="fragments :: navBar"></div>
+
+    <div class="w3-content w3-container w3-padding-64">
     <form method="post" action="/signup">
         <fieldset>
-            <legend>Enter your name to be listed as a fan!</legend>
-            <div><input type="text" name="first_name" placeholder="first name"></div>
-            <div><input type="text" name="last_name" placeholder="last name"></div>
-            <div><input type="text" name="username" placeholder="username"></div>
-            <div><input type="text" name="email" placeholder="email address"></div>
-            <div><input type="submit" value="I'm a fan!"></div>
+            <legend><h3 class="w3-center">Enter your name to be listed as a fan!</h3></legend>
+            <input type="text" name="first_name" placeholder="first name" required><br>
+            <input type="text" name="last_name" placeholder="last name" required><br>
+            <input type="text" name="username" placeholder="username" required><br>
+            <input type="text" name="email" placeholder="email address" required><br>
+            <input type="submit" value="I'm a fan!">
         </fieldset>
     </form>
-</div>
+    </div>
 
 
 </body>
