--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <title>Kenny Maness</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -12,24 +12,7 @@
 <body>
 
 <!-- Navbar (sit on top) -->
-<div class="w3-top">
-    <div class="w3-bar" id="myNavbar">
-        <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
-            <i class="fa fa-bars"></i>
-        </a>
-        <a href="#home" class="w3-bar-item w3-button">HOME</a>
-        <a href="#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
-        <a href="#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
-        <a href="#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-    </div>
-
-    <!-- Navbar on small screens -->
-    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium">
-        <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
-        <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
-        <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
-    </div>
-</div>
+<div th:replace="fragments :: navBar"></div>
 
 <!-- First Parallax Image with Logo Text -->
 <div class="bgimg-1 w3-display-container w3-opacity-min" id="home">
@@ -65,13 +48,17 @@
         </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">I'm really good at:</p>
-    <p class="w3-wide"><i class="fa fa-music"></i>Music Production</p>
+    <p class="w3-halfwide"><i class="fa fa-music w3-wide"></i>Music Production</p>
     <div class="w3-light-grey">
         <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
     </div>
-    <p class="w3-wide"><i class="fa fa-laptop"></i>Web Development</p>
+    <p class="w3-halfwide"><i class="fa fa-laptop w3-wide"></i>Web Development</p>
     <div class="w3-light-grey">
         <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
+    </div>
+    <p class="w3-halfwide"><i class="fa fa-book w3-wide"></i>Dungeons & Dragons</p>
+    <div class="w3-light-grey">
+        <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
     </div>
 </div>
 
@@ -103,7 +90,7 @@
 
 <!-- Container (Portfolio Section) -->
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
-    <h3 class="w3-center">MY WORK</h3>
+    <h3 class="w3-center">MY MUSIC</h3>
     <p class="w3-center">
         <em>Here are some of the projects that I've published over the years.<br>
         Click on the images to make them bigger</em>
@@ -144,7 +131,26 @@
         <div class="w3-col m3">
             <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
-<!--        <button class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px">LOAD MORE</button>-->
+    </div>
+
+    <div class="w3-row-padding w3-center w3-section">
+        <div class="w3-half m3">
+        <form>
+            <button type="submit" class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px" formaction="https://open.spotify.com/artist/39qTRjqEX07GVBbJ9LPPGe">
+                <i class="fa fa-spotify fa-fw w3-xlarge w3-margin-right"></i>
+                LISTEN ON SPOTIFY
+            </button>
+        </form>
+        </div>
+
+        <div class="w3-half m3">
+        <form>
+            <button type="submit" class="w3-button w3-padding-large w3-light-grey" style="margin-top:64px" formaction="https://music.apple.com/us/artist/kenny-maness/1296686372">
+                <i class="fa fa-apple fa-fw w3-xlarge w3-margin-right"></i>
+                LISTEN ON APPLE MUSIC
+            </button>
+        </form>
+        </div>
     </div>
 </div>
 
