--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -5,24 +5,28 @@
 
 <body>
 
-<div th:replace="fragments :: navigation"></div>
+<div th:replace="fragments :: navBar"></div>
 
 <div th:if="${#lists.isEmpty(users)}">
-<h2>Sorry, there are no users to display at this time.</h2>
+    <fieldset>
+        <legend><h2>Sorry, there are no users to display at this time.</h2></legend>
+    </fieldset>
 </div>
 
-<div th:if="${not #lists.isEmpty(users)}">
-    <h2>Here are the users.</h2>
-    <table>
-        <tr>
-            <th>Name</th>
-            <th>Username</th>
-        </tr>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.getFullName()}"></td>
-            <td th:text="${user.getUsername()}"></td>
-        </tr>
-    </table>
+<div th:if="${not #lists.isEmpty(users)}" class="w3-content w3-container w3-padding-64">
+    <fieldset>
+        <legend><h3 class="w3-center">Here are the users.</h3></legend>
+        <table class="kmtable">
+            <tr>
+                <th class="kmtable">Name</th>
+                <th class="kmtable">Username</th>
+            </tr>
+            <tr th:each="user : ${users}">
+                <td th:text="${user.getFullName()}" class="kmtable"></td>
+                <td th:text="${user.getUsername()}" class="kmtable"></td>
+            </tr>
+        </table>
+    </fieldset>
 </div>
 
 </body>
