--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -24,10 +24,12 @@
                     <tr>
                         <th class="kmtable">Name</th>
                         <th class="kmtable">Username</th>
+                        <th class="kmtable">Email</th>
                     </tr>
                     <tr th:each="user : ${users}">
                         <td th:text="${user.getFullName()}" class="kmtable"></td>
                         <td th:text="${user.getUsername()}" class="kmtable"></td>
+                        <td th:text="${user.getEmail()}" class="kmtable"></td>
                     </tr>
                 </table>
             </fieldset>
