--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -32,7 +32,7 @@
         <a href="/#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
         <a href="/#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-<!--        <a href="/users" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-tv"></i> BLOG</a>-->
+        <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> BLOG</a>
 <!--        <a href="/signup" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> SIGN UP</a>-->
     </div>
 
