--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -1,12 +1,12 @@
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif;}
 body, html {
   height: 100%;
-  color: #777;
+  color: #505050;
   line-height: 1.8;
   background-image: url("images/bgimg-4.JPG");
 }
 
-/* Parallax Effect */
+/* Parallax Scrolling! */
 .bgimg-1, .bgimg-2, .bgimg-3 {
   background-attachment: fixed;
   background-position: center;
