--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -92,37 +92,37 @@
     <!-- Responsive Grid. Four columns on tablets, laptops and desktops. Will stack on mobile devices/small screens (100% width) -->
     <div class="w3-row-padding w3-center">
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Dreamwaves EP">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-2.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lost Transmissions">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-3.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Coordinates">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Tell Me (That You Still Care)">
         </div>
     </div>
 
     <div class="w3-row-padding w3-center w3-section">
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-5.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-6.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Everything Was Completely Silent">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-7.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Somna">
         </div>
 
         <div class="w3-col m3">
-            <img src="images/album.png" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="From Stockholm To Seattle">
+            <img src="images/album-8.jpeg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="My Shiny Teeth And Me">
         </div>
     </div>
 
@@ -175,10 +175,11 @@
             <div class="w3-large w3-margin-bottom">
                 <i class="fa fa-map-marker fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>St. Louis, MO<br>
                 <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>+1 (618) 555-1234<br>
-                <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>kenny.maness@gmail.com<br>
+                <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i>kenneth.l.maness@gmail.com<br>
                 <i class="fa fa-facebook fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.facebook.com/kennethlewismaness">Facebook</a><br>
                 <i class="fa fa-instagram fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.instagram.com/kenny.maness/">Instagram</a><br>
                 <i class="fa fa-twitter fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://twitter.com/kenny_maness">Twitter</a><br>
+                <i class="fa fa-bandcamp fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://kennymaness.bandcamp.com/">Bandcamp</a><br>
                 <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.linkedin.com/in/kenneth-maness-61784219a/">LinkedIn</a><br>
             </div>
         </div>
