begin spring security

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -85,7 +85,7 @@
 <div class="w3-content w3-container w3-padding-64" id="portfolio">
     <h3 class="w3-center">MY MUSIC</h3>
     <p class="w3-center">
-        <em>Here are some of the projects that I've published over the years.<br>
+        <em>Here are some of the projects that I've published myself or been a part of over the years.<br>
         Click on the images to make them bigger</em>
     </p><br>
 
