--- a/src/main/resources/templates/blog.html
+++ b/src/main/resources/templates/blog.html
@@ -1,45 +1,17 @@
-<!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head th:replace="fragments :: head"></head>
 
 <body>
 
+<!-- Navbar (sit on top) -->
 <div th:replace="fragments :: navBar"></div>
 
-<!-- First Parallax Image with Logo Text -->
-<div class="bgimg-4 w3-display-container w3-opacity-min" id="home">
-
-    <div class="w3-center">
-        <div th:if="${#lists.isEmpty(users)}">
-            <fieldset>
-                <legend><h2>Sorry, there are no users to display at this time.</h2></legend>
-            </fieldset>
-        </div>
-
-        <div th:if="${not #lists.isEmpty(users)}" class="w3-content w3-container w3-padding-64">
-            <fieldset>
-                <legend><h3 class="w3-center">Here are the users.</h3></legend>
-                <table class="kmtable">
-                    <tr>
-                        <th class="kmtable">Name</th>
-                        <th class="kmtable">Username</th>
-                        <th class="kmtable">Email</th>
-                    </tr>
-                    <tr th:each="user : ${users}">
-                        <td th:text="${user.getFullName()}" class="kmtable"></td>
-                        <td th:text="${user.getUsername()}" class="kmtable"></td>
-                        <td th:text="${user.getEmail()}" class="kmtable"></td>
-                    </tr>
-                </table>
-            </fieldset>
-        </div>
-    </div>
-
+<div class="w3-display-middle" style="white-space:nowrap;">
+    <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
+        Blog portion under construction.
+    </span>
 </div>
 
-
-
 </body>
-
 </html>
