--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -33,7 +33,7 @@
         <a href="/#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
         <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> BLOG</a>
-<!--        <a href="/signup" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> SIGN UP</a>-->
+        <a href="/login" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> LOG IN</a>
     </div>
 
     <!-- Navbar on small screens -->
