implement spring security

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -12,13 +12,7 @@
     <div class="w3-center">
             <fieldset>
                 <legend><h3 class="w3-center">ERROR</h3></legend>
-                <p>I'm sorry, but for one reason or another, you have been redirected to this error page.
-                This may be due to something having gone wrong with the code,
-                or maybe you entered in a url that doesn't exist. One way or another, however,
-                the unmistakable truth of the matter is that you're here, reading this error message.<br>
-                So why don't you stay awhile and rest? I'm sure you could use the peace and quiet.
-                The internet is such a busy place nowadays, and I think it becomes us to take a moment
-                every once in a while to just be, without any other worrisome verbs clogging up our bodies.</p>
+                <p>Something's gone wrong!</p>
             </fieldset>
     </div>
 
