--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -14,15 +14,6 @@
 
 <body>
 
-<div th:fragment="navigation">
-<nav>
-<a href="/">Home</a> |
-<a href="/login">Log In</a> |
-<a href="/signup">Sign Up</a> |
-<a href="/users">Users</a>
-</nav>
-</div>
-
 <div th:fragment="navBar" class="w3-top">
     <div class="w3-bar" id="myNavbar">
         <a class="w3-bar-item w3-button w3-hover-black w3-hide-medium w3-hide-large w3-right" href="javascript:void(0);" onclick="toggleFunction()" title="Toggle Navigation Menu">
@@ -32,7 +23,7 @@
         <a href="/#about" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-user"></i> ABOUT</a>
         <a href="/#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
-        <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> BLOG</a>
+        <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>
         <a href="/login" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> LOG IN</a>
     </div>
 
