--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -27,6 +27,8 @@
             </div>
 
             <div><input type="submit" value="Sign me up!"></div>
+
+            <div>Already a fan? <a href="/login">Log in here!</a></div>
         </fieldset>
     </form>
     </div>
