--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -9,8 +9,12 @@
 
 <div class="w3-display-middle" style="white-space:nowrap;">
     <span class="w3-center w3-padding-large w3-black w3-xlarge w3-wide w3-animate-opacity">
-        Welcome, Admin!
+        You have been successfully logged out.
     </span>
+</div>
+
+<div class="w3-display-middle">
+    <a href="/">return home</a>
 </div>
 
 </body>
