--- a/src/main/resources/templates/registration/login.html
+++ b/src/main/resources/templates/registration/login.html
@@ -7,7 +7,7 @@
 <div th:replace="fragments :: navBar"></div>
 
 <div class="w3-content w3-container w3-padding-64">
-    <div th:if="${param.error}">Invalid username and password.</div>
+    <div th:if="${param.error}">Invalid username or password.</div>
     <div th:if="${param.logout}">You have been logged out.</div>
 
     <form method="post" action="@{/login}">
