remove SecurityService & SecurityServiceImpl; minor changes

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -25,6 +25,9 @@
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
         <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>
         <a href="/login" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> LOG IN</a>
+        <form method="post" th:action="@{/logout}">
+            <button class="w3-bar-item w3-button w3-hide-small div-right" type="submit">LOG OUT</button>
+        </form>
     </div>
 
     <!-- Navbar on small screens -->
@@ -32,6 +35,8 @@
         <a href="#about" class="w3-bar-item w3-button" onclick="toggleFunction()">ABOUT</a>
         <a href="#portfolio" class="w3-bar-item w3-button" onclick="toggleFunction()">PORTFOLIO</a>
         <a href="#contact" class="w3-bar-item w3-button" onclick="toggleFunction()">CONTACT</a>
+        <a href="/blog" class="w3-bar-item w3-button" onclick="toggleFunction()">KENNY'S BLOG</a>
+        <a href="/login" class="w3-bar-item w3-button" onclick="toggleFunction()">LOG IN</a>
     </div>
 </div>
 
