--- a/src/main/resources/templates/registration/signup.html
+++ b/src/main/resources/templates/registration/signup.html
@@ -9,7 +9,7 @@
     <div class="w3-content w3-container w3-padding-64">
     <form method="post" action="/signup">
         <fieldset>
-            <legend><h3 class="w3-center">Create a username and password for your fan account</h3></legend>
+            <legend><h3 class="w3-center">Sign up for your fan account here.</h3></legend>
 
             <div>
                 <input type="text" name="username" placeholder="username" th:attr="value = ${username}" required>
