add resume download link to contact section

--- a/src/main/resources/templates/blog/add.html
+++ b/src/main/resources/templates/blog/add.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <head th:replace="fragments :: head"></head>
 
@@ -33,7 +33,7 @@
                 <input class="form-control" type="file" id="postImage" name="postImage"/>
             </div>
 
-            <input type="submit" value="Add Title"/>
+            <input type="submit" value="Add Post"/>
         </fieldset>
     </form>
 
