--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -24,10 +24,10 @@
         <a href="/#portfolio" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-th"></i> PORTFOLIO</a>
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
         <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>
-        <a href="/login" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-pencil"></i> LOG IN</a>
         <form method="post" th:action="@{/logout}">
-            <button class="w3-bar-item w3-button w3-hide-small div-right" type="submit">LOG OUT</button>
+            <button class="w3-bar-item w3-button w3-hide-small w3-right" type="submit"><i class="fa fa-sign-out"></i> LOG OUT</button>
         </form>
+        <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-pencil"></i> LOG IN</a>
     </div>
 
     <!-- Navbar on small screens -->
