--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -181,6 +181,7 @@
                 <i class="fa fa-twitter fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://twitter.com/kenny_maness">Twitter</a><br>
                 <i class="fa fa-bandcamp fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://kennymaness.bandcamp.com/">Bandcamp</a><br>
                 <i class="fa fa-linkedin fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="https://www.linkedin.com/in/kenneth-maness-61784219a/">LinkedIn</a><br>
+                <i class="fa fa-download fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i><a href="files/resume.pdf" download="resume">Download My Resume</a><br>
             </div>
         </div>
     </div>
