--- a/src/main/resources/templates/registration/login.html
+++ b/src/main/resources/templates/registration/login.html
@@ -24,7 +24,7 @@
                 <span><p th:text="${password_error}" class="error"></p></span>
             </div>
 
-            <div><input type="submit" value="Log In"></div>
+            <div><button type="submit" value="Log In">Log In</button></div>
 
             <div>No account? <a href="/signup">Sign up for a fan account!</a></div>
         </fieldset>
