--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -25,7 +25,7 @@
         <a href="/#contact" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-envelope"></i> CONTACT</a>
         <a href="/blog" class="w3-bar-item w3-button w3-hide-small"><i class="fa fa-book"></i> KENNY'S BLOG</a>
         <a href="/logout" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-out"></i> LOG OUT</a>
-        <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-pencil"></i> LOG IN</a>
+        <a href="/login" class="w3-bar-item w3-button w3-hide-small w3-right"><i class="fa fa-sign-in"></i> LOG IN</a>
     </div>
 
     <!-- Navbar on small screens -->
